<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >



    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/material_blue_grey_900">

        <Button
            android:layout_marginTop="180dp"
            android:layout_marginLeft="100dp"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:id="@+id/bLogin"
            android:backgroundTint="#ff03a6ff"
            android:text="@string/bLogin" />

        <Button
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:id="@+id/bRegister"
            android:layout_alignLeft="@+id/bLogin"
            android:layout_below="@+id/bLogin"
            android:backgroundTint="#fffdff03"
            android:text="@string/bRegister" />



    </RelativeLayout>

    <ScrollView
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/scrollView"
        android:background="@color/material_blue_grey_800"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Tab_login" >

            <Button
                android:id="@+id/About_Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="About_Application"
                android:background="@android:color/transparent"
                android:text="@string/About_Button" />

            <Button
                android:id="@+id/Profile_Button"
                android:layout_below="@+id/About_Button"
                android:onClick="Open_Profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/Profile_Button" />

            <Button
                android:id="@+id/Settings_Button"
                android:layout_below="@+id/Profile_Button"
                android:onClick="Open_Settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/Settings_Button" />

            <Button
                android:id="@+id/Logout_Button"
                android:layout_below="@+id/Settings_Button"
                android:onClick="Logout_User"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/Logout_Button" />
        </RelativeLayout>
    </ScrollView>



</android.support.v4.widget.DrawerLayout>
