<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_blue_grey_900"
        android:gravity="center">


        <LinearLayout
            android:id="@+id/Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Username"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/First_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/Layout"
            android:orientation="horizontal">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Rollno"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/Spring_Fall_Spinner"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:entries="@array/Spring_Fall_Array"
                android:prompt="@string/Spring_Fall_Spinner"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/Degree_Spinner"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:entries="@array/Degree_Array"
                android:prompt="@string/Degree_Spinner" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/RollNumber"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textColor="@android:color/white" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/Second_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/First_Layout"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Password"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/bLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/Second_layout"
            android:layout_alignLeft="@+id/Second_layout"
            android:layout_alignRight="@+id/Second_layout"
            android:layout_below="@+id/Second_layout"
            android:layout_marginTop="31dp"
            android:text="@string/bLogin" />
    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/material_blue_grey_800">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Tab_login">

            <Button
                android:id="@+id/About_Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:onClick="About_Application"
                android:text="@string/About_Button" />

            <Button
                android:id="@+id/Profile_Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/About_Button"
                android:background="@android:color/transparent"
                android:onClick="Open_Profile"
                android:text="@string/Profile_Button" />

            <Button
                android:id="@+id/Settings_Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/Profile_Button"
                android:background="@android:color/transparent"
                android:onClick="Open_Settings"
                android:text="@string/Settings_Button" />

            <Button
                android:id="@+id/Logout_Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/Settings_Button"
                android:background="@android:color/transparent"
                android:onClick="Logout_User"
                android:text="@string/Logout_Button" />
        </RelativeLayout>
    </ScrollView>


</android.support.v4.widget.DrawerLayout>


