
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="25dp"
        android:paddingRight="40dp"
        android:paddingTop="30dp"
        android:background="@color/material_blue_grey_900"
        tools:context="com.example.salman.android_tutorials.Forms">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Enter Destination"
            android:id="@+id/textView3"

            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Enter Initial location"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="56dp"
            android:textColor="@android:color/white" />




        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Destination_EditBox"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView3"
            android:layout_alignEnd="@+id/textView3" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/IntialLocation_EditBox"
            android:layout_below="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Available seats"

            android:paddingRight="40px"
            android:id="@+id/Available_Seats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/Seats_Selector"
            android:layout_alignStart="@+id/IntialLocation_EditBox"
            android:textColor="@android:color/white" />

        <Spinner
            android:layout_marginTop="20dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Seats_Selector"
            android:entries="@array/Seats_Selector"
            android:prompt="@string/Seats_Selector"
            android:layout_alignEnd="@+id/Available_Seats"
            android:layout_below="@+id/IntialLocation_EditBox"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/Available_Seats" />


        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Departure time"

            android:paddingRight="40px"
            android:id="@+id/Departure_Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/Departure_Time_Selector"
            android:layout_toStartOf="@+id/Departure_Time_Selector"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Post"
            android:id="@+id/bPost"
            android:layout_marginTop="52dp"
            android:layout_below="@+id/Departure_Time_Selector"
            android:layout_alignEnd="@+id/Departure_Time_Selector"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/Departure_Time_Selector"
            android:layout_below="@+id/Available_Seats"
            android:layout_toEndOf="@+id/Available_Seats" />






    </RelativeLayout>



    <ScrollView
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/scrollView"
        android:background="@color/material_blue_grey_800"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Tab_login" >

            <Button
                android:id="@+id/About_Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="About_Application"
                android:background="@android:color/transparent"
                android:text="@string/About_Button" />

            <Button
                android:id="@+id/Profile_Button"
                android:layout_below="@+id/About_Button"
                android:onClick="Open_Profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/Profile_Button" />

            <Button
                android:id="@+id/Settings_Button"
                android:layout_below="@+id/Profile_Button"
                android:onClick="Open_Settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/Settings_Button" />

            <Button
                android:id="@+id/Logout_Button"
                android:layout_below="@+id/Settings_Button"
                android:onClick="Logout_User"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/Logout_Button" />
        </RelativeLayout>
    </ScrollView>



</android.support.v4.widget.DrawerLayout>
